--- a/main.css
+++ b/main.css
@@ -3,15 +3,20 @@ p {
     margin-bottom: 0px;
 }
 
+ul {
+    padding-left: 0px;
+}
+
+li {
+    list-style: none;
+}
+
 /* 開始・取得中・結果画面 */
-.message-text {
+.question-text {
     border-top: 1px solid #333;
     border-bottom: 1px solid #333;
     padding: 5px 0px;
-}
-
-.message-text--start {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 #home-button {
@@ -20,25 +25,13 @@ p {
 
 /* 問題表示画面 */
 
-#question {
-    display: none;
-}
-
 .question__detail {
     font-weight: bold;
+    display: none;
 }
 
 #question__difficulty {
     margin-top: 5px;
-}
-
-.question__select {
-    margin-top: 20px;
-}
-
-.question__select-button {
-    display: block;
-    margin-bottom: 5px;
 }
 
 
